test/org/midica/testfiles/failing/var-with-whitespace.midica
INCLUDE inc/instruments.midica

VAR x = c c


0  c  /4
